<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_learning">


    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.psgpw.geek_ttn.fragments.CoursesFragment"
        android:label="@string/title_learning"
        tools:layout="@layout/fragment_courses">
        <action
            android:id="@+id/action_navigation_course_to_topicFragment"
            app:destination="@id/navigation_topics" />

        <action
            android:id="@+id/action_navigation_learning_to_newCourseFragment"
            app:destination="@id/newCourseFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_learning"
        android:name="com.psgpw.geek_ttn.fragments.LearningFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_learning">
        <action
            android:id="@+id/action_navigation_learning_to_courseFragment"
            app:destination="@id/navigation_courses" />
    </fragment>

    <fragment
        android:id="@+id/navigation_assignments"
        android:name="com.psgpw.geek_ttn.fragments.AssignmentsFragment"
        android:label="@string/title_assignments"
        tools:layout="@layout/fragment_assignments">

    </fragment>

    <fragment
        android:id="@+id/navigation_topics"
        android:name="com.psgpw.geek_ttn.fragments.TopicListFragment"
        android:label="Topics"
        tools:layout="@layout/fragment_topic_list">

        <action
            android:id="@+id/action_navigation_topic_to_subTopicFragment"
            app:destination="@id/navigation_subtopic" />

    </fragment>

    <fragment
        android:id="@+id/navigation_subtopic"
        android:name="com.psgpw.geek_ttn.fragments.SubTopicFragment"
        android:label="@string/title_subtopic"
        tools:layout="@layout/fragment_sub_topic">

    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.psgpw.geek_ttn.fragments.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat">

    </fragment>
    <fragment
        android:id="@+id/newCourseFragment"
        android:name="com.example.greekcompactapp.fragment.NewCourseFragment"
        android:label="NewCourseFragment"
        tools:layout="@layout/fragment_new_course"/>

</navigation>